==> MaltWhiskey/Mega-Cube/Documents/2.4inch_SPI_Module_ILI9341_MSP2402_V1.1/1-Demo/Demo_STM32/Demo_STM32F429IGT6_Hardware_SPI/HARDWARE/TOUCH/touch.c <==
#include "touch.h"
#include "lcd.h"
#include "delay.h"
#include "stdlib.h"
#include "math.h"
#include "24cxx.h"
#include "gui.h"

u8 TP_Init(void)
{			    		   
	//注意,时钟使能之后,对GPIO的操作才有效
	//所以上拉之前,必须使能时钟.才能实现真正的上拉输出
		GPIO_InitTypeDef GPIO_Initure;	//GPIO
		__HAL_RCC_GPIOH_CLK_ENABLE();			//开启GPIOH时钟
		__HAL_RCC_GPIOI_CLK_ENABLE();			//开启GPIOI时钟
		__HAL_RCC_GPIOG_CLK_ENABLE();			//开启GPIOG时钟
        

		//PH6
		GPIO_Initure.Pin=GPIO_PIN_6;            //PH6
		GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
		GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
		GPIO_Initure.Speed=GPIO_SPEED_HIGH;     //高速
		HAL_GPIO_Init(GPIOH,&GPIO_Initure);     //初始化
        
		//PI3,8
		GPIO_Initure.Pin=GPIO_PIN_3|GPIO_PIN_8; //PI3,8
		HAL_GPIO_Init(GPIOI,&GPIO_Initure);     //初始化
        
		//PH7
		GPIO_Initure.Pin=GPIO_PIN_11;            //PH7
		GPIO_Initure.Mode=GPIO_MODE_INPUT;      //输入
		HAL_GPIO_Init(GPIOH,&GPIO_Initure);     //初始化
        
		//PG3
		GPIO_Initure.Pin=GPIO_PIN_3;            //PG3
		HAL_GPIO_Init(GPIOG,&GPIO_Initure);     //初始化
		    		     

  	TP_Read_XY(&tp_dev.x,&tp_dev.y);//第一次读取初始化	 
 	AT24CXX_Init();//初始化24CXX
	if(TP_Get_Adjdata())return 0;//已经校准
	else			   //未校准?
	{ 										    
		LCD_Clear(WHITE);//清屏
	    TP_Adjust();  //屏幕校准 
		TP_Save_Adjdata();	 
	}			
	TP_Get_Adjdata();	
	return 1; 									 
}
